# image_viewer

./: .env  .gitignore  .qmllint.ini  AGENTS.md  GEMINI.md  README.md  SESSIONS.md  TASKS.md  debug_crop_zoom.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
backup/: explorer_mode_operations.py.old  qml_bridge.py.old  ui_explorer_grid.py.old  ui_explorer_tree.py.old  ui_shortcuts.py.old  view_mode_operations.py.old
dev-docs/: Cache_Policy.md  GC_FIX_SUMMARY.md  QML-Python_Communication_Refactoring_Roadmap.md  QML-Python_ZeroBased_Design_Reference.md  QML_Logging.md  REFACTOR_IMAGE_ENGINE.md  REFACTOR_UI_FOLDER.md  REFACTOR_UNIFIED_FILESYSTEM_MODEL.md  Signal-Slot_Refactoring_Concept.md  architecture_diagrams.md  file_cache_feature.md  font_packaging_for_distribution.md  fs_model_refactor_plan.md  full_screen_toggle_problem_trials.md  logging_manual.md  memory_caching_notes.md  metrics.md  modal-dialogue maximiaing problem.md  opus-review.md  qt_quick_backend_overrides.md  testing.md  thumbdb_migration_guide.md  thumbnail_cache_system.md  translated.md  warp-review.md
image_viewer/: TODO.md  __main__.py  busy_cursor.py  crop.py  crop_operations.py  decoder.py  display_controller.py  explorer_file_ops.py  explorer_file_ops.py.old  explorer_mode_operations.py  file_operations.py  file_operations.py.old  fs_model.py  image_viewer.py  loader.py  logger.py  main.py  main.py.old  path_utils.py  qml_bridge.py  qml_models.py  settings.json  settings_manager.py  status_overlay.py  status_overlay.py.old  strategy.py  styles.py  thumbnail_cache.py  trim.py  trim_operations.py  ui_canvas.py  ui_convert_webp.py  ui_convert_webp.py.old  ui_crop.py  ui_crop_selection.py  ui_explorer_grid.py  ui_explorer_tree.py  ui_hover_menu.py  ui_menus.py  ui_settings.py  (+5 more)
scripts/: README.md  auto-commit.ps1  debug_call_impl.py  debug_crop_setup.py  debug_crop_zoom.py  install_dejavu_fonts.py  menu_test_app.py  migrate_thumb_db.py  run_checks.py  run_tests_offscreen.py  watch_and_check.py
tests/: check_saved_geometry.py  conftest.py  delete_test.py  full_screen_toggle.py  resize_maximize_example.py  rgb_hist_image.py  smoke_test.py  test.py  test_appcontroller_pass_through.py  test_apply_trim_file.py  test_canvas_helpers.py  test_crop_backend.py  test_crop_controller.py  test_crop_dialog.py  test_crop_fullscreen.py  test_crop_pixmap_update.py  test_crop_preview.py  test_crop_wheel.py  test_cursor_behavior.py  test_db_creation.py  test_db_operator.py  test_db_operator_shutdown.py  test_debug_overlay_table.py  test_decoder_encode_file_to_png.py  test_delete_confirmation.py  test_enginecore_db_operator_wiring.py  test_enginecore_png_encode.py  test_enginecore_vips_thumb_encode.py  test_explorer_db_lazy_load.py  test_explorer_select_lifetime.py  (+57 more)
(+113 files in other folders)
