[project]
name = "image-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pyside6>=6.10.0",
    "pyvips[binary]>=3.0.0",
    "send2trash>=1.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["image_viewer", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
