[project]
name = "image-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pyside6>=6.10.0",
    "pyvips[binary]>=3.0.0",
    "send2trash>=1.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["image_viewer"]
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pyside6-stubs>=6.7.3.0",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "ruff>=0.14.4",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Stub 관련 에러 무시
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
# PySide6/pyvips stub 문제로 인한 에러 무시
reportAttributeAccessIssue = false
reportCallIssue = false
reportArgumentType = false
reportIndexIssue = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportOptionalCall = false
# 실제 중요한 에러만 체크
reportGeneralTypeIssues = true
reportMissingImports = true
reportUndefinedVariable = true
reportInvalidTypeForm = true
# 프로젝트 범위
include = ["image_viewer"]
exclude = [".venv", ".cache", ".pytest_cache", ".ruff_cache", ".uv-cache", "**/build","**/dist"]

[tool.pytest.ini_options]
markers = ["imaging: marks tests that require imaging libraries (pyvips/numpy)"]
testpaths = ["tests"]
